frontend/test/should_fail/array_map_graph_element.grg
test array_map(ref a:array<int>) {
	n:Node;	
	if {
		a.map<Edge>{value:int -> n}.empty();
	}	
}
